--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@canvasjs/charts": "^3.8.4",
     "@canvasjs/react-charts": "^1.0.2",
     "@emotion/react": "^11.11.4",
